--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 img {
     max-width: 100%;
+}
+
+.proyect-container:hover .proyect-filter {
+    opacity: 0.9;
+    transition: .5s;
 }
